--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <ul>
-        <li><a href="flower-of-life/index.html"></a></li>
+        <li><a href="flower-of-life/index.html">flower of life generation</a></li>
         <li><a href=""></a></li>
         <li><a href=""></a></li>
         <li><a href=""></a></li>
