--- a/index.html
+++ b/index.html
@@ -8,13 +8,12 @@
 </head>
 <body>
     <ul>
-        <li><a href="flower-of-life/index.html">flower of life generation</a></li>
+        <li><a href="flower-of-life/index.html" target="_blank">flower of life generation</a></li>
         <li><a href=""></a></li>
         <li><a href=""></a></li>
         <li><a href=""></a></li>
         <li><a href=""></a></li>
     </ul>
-
     
 </body>
 </html>
