--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <ul>
         <li><a href="flower-of-life/index.html" target="_blank">flower of life generation</a></li>
-        <li><a href=""></a></li>
+        <li><a href="hexagons-covering/index.html" target="_blank">hexagon covering (incomplete)</a></li>
         <li><a href=""></a></li>
         <li><a href=""></a></li>
         <li><a href=""></a></li>
