mandala generator and mandala set generator

--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
 </head>
 <body>
     <ul>
+        
+        <li><a href="time-table-mandalas/mandala.html">Mandala Looper [based on time tables]</a></li>
+        <li><a href="time-table-mandalas/mandala-generator.html">Mandala Set Generator [based on time tables]</a></li>
         <li><a href="flower-of-life/index.html" target="_blank">flower of life generation</a></li>
         <li><a href="hexagons-covering/index.html" target="_blank">hexagon covering (incomplete)</a></li>
-        <li><a href=""></a></li>
         <li><a href=""></a></li>
         <li><a href=""></a></li>
     </ul>
