--- a/time-table-mandalas/mandala.html
+++ b/time-table-mandalas/mandala.html
@@ -1,10 +1,13 @@
 <html>
   <head>
-    <title>Flower of Life</title>
+    <title>Mandala Looper [based on time tables]</title>
   </head>
   <body>
+    Click on canvas to stop animation.<br>
+    Use right/left arrows to increse and decrese number of points 
+    <br><br>
     <script src="https://cdn.jsdelivr.net/npm/p5@1.2.0/lib/p5.js"></script>
-    <script src="functions.js"></script>
-    <script src="mandalas-script.js"></script>
+    <script src="functions.min.js"></script>
+    <script src="mandala.min.js"></script>
   </body>
 </html>
