--- a/index.html
+++ b/index.html
@@ -8,14 +8,15 @@
 </head>
 <body>
     <ul>
-        
         <li><a href="time-table-mandalas/mandala.html">Mandala Looper [based on time tables]</a></li>
         <li><a href="time-table-mandalas/mandala-generator.html">Mandala Set Generator [based on time tables]</a></li>
         <li><a href="flower-of-life/index.html" target="_blank">flower of life generation</a></li>
         <li><a href="hexagons-covering/index.html" target="_blank">hexagon covering (incomplete)</a></li>
+        <li><a href="music-visualisation-with-reversed-drops/index.html" target="_blank">music visualisation with drops (incomplete)</a></li>
+        <li><a href="periodics/index.html" target="_blank">periodics</a></li>
+        <li><a href="noizy-circle/" target="_blank">noizy circles</a></li>
         <li><a href=""></a></li>
         <li><a href=""></a></li>
     </ul>
-    
 </body>
 </html>
