--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <li><a href="music-visualisation-with-reversed-drops/index.html" target="_blank">music visualisation with drops (incomplete)</a></li>
         <li><a href="periodics/index.html" target="_blank">periodics</a></li>
         <li><a href="noizy-circle/" target="_blank">noizy circles</a></li>
-        <li><a href=""></a></li>
-        <li><a href=""></a></li>
+        <li><a href="particles/" target="_blank">particles</a></li>
+        <li><a href="" target="_blank"></a></li>
     </ul>
 </body>
 </html>
