added playing around blanding modes

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <li><a href="periodics/index.html" target="_blank">periodics</a></li>
         <li><a href="noizy-circle/" target="_blank">noizy circles</a></li>
         <li><a href="particles/" target="_blank">particles</a></li>
+        <li><a href="playing-around-blanding-modes/" target="_blank">playing around blanding modes</a></li>
         <li><a href="" target="_blank"></a></li>
     </ul>
 </body>
