--- a/art-letter-flower/index.html
+++ b/art-letter-flower/index.html
@@ -35,7 +35,7 @@
     <input type="range" min=0 max=35 step=1 value=0 id="letters"><br>
   </div>
 
-  <script src="../p5.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/p5@1.2.0/lib/p5.js"></script>
   <script src="sketch.js"></script>
 </body>
 
