--- a/art-hexagons-covering/index.html
+++ b/art-hexagons-covering/index.html
@@ -10,7 +10,8 @@
 <!-- partial:index.partial.html -->
 
 <!-- partial -->
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.2.0/p5.min.js'></script><script  src="./script.js"></script>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.2.0/p5.min.js'></script>
+  <script  src="./script.js"></script>
 
 </body>
 </html>
