--- a/art-cardioid/index.html
+++ b/art-cardioid/index.html
@@ -7,9 +7,9 @@
     <script src="https://cdn.jsdelivr.net/npm/p5@1.2.0/lib/p5.js"></script>
     <!-- <script src="../addons/p5.dom.min.js"></script> -->
     <!-- <script src="../addons/p5.sound.min.js"></script> -->
-    <script src="../00functions/math.js"></script>
-    <script src="../00functions/colors.js"></script>
-    <script src="../00functions/parametrics.js"></script>
+    <script src="../aLib/math.js"></script>
+    <script src="../aLib/colors.js"></script>
+    <script src="../aLib/parametrics.js"></script>
     <script src="sketch.js"></script>
   </head>
   <body>
