--- a/art-arrows/index.html
+++ b/art-arrows/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
     <style> body {padding: 0; margin: 0;} </style>
     <script src="https://cdn.jsdelivr.net/npm/p5@1.2.0/lib/p5.js"></script>
+    <script src="../aLib/colors.js"></script>
+    <script src="../aLib/math.js"></script>
     <script src="sketch.js"></script>
   </head>
   <body>
