--- a/art-image-manipulations-example/index.html
+++ b/art-image-manipulations-example/index.html
@@ -13,6 +13,10 @@
 
   <!-- partial -->
   <script src='https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.2.0/p5.min.js'></script>
+  <script src="../aLib/math.js"></script>
+  <script src="../aLib/colors.js"></script>
+  <script src="../aLib/texts.js"></script>
+  <script src="../aLib/parametrics.js"></script>
   <script src="./script.js"></script>
 
 </body>
