--- a/art-cardioid/index.html
+++ b/art-cardioid/index.html
@@ -9,7 +9,7 @@
     <!-- <script src="../addons/p5.sound.min.js"></script> -->
     <script src="../aLib/math.js"></script>
     <script src="../aLib/colors.js"></script>
-    <script src="../aLib/parametrics.js"></script>
+    <script src="../aLib/shapes.js"></script>
     <script src="sketch.js"></script>
   </head>
   <body>
