--- a/art-constalation/index.html
+++ b/art-constalation/index.html
@@ -9,7 +9,7 @@
     <script src="../aLib/colors.js"></script>
     <script src="../aLib/texts.js"></script>
     <script src="../aLib/shapes.js"></script>
-    <script src="particle.js"></script>
+    <script src="../aLib/structures.js"></script>
     <script src="sketch.js"></script>
   </head>
   <body>
