--- a/art-handdrawn-circles-on-archimedian-spiral/index.html
+++ b/art-handdrawn-circles-on-archimedian-spiral/index.html
@@ -8,7 +8,7 @@
     <script src="../aLib/math.js"></script>
     <script src="../aLib/colors.js"></script>
     <script src="../aLib/texts.js"></script>
-    <script src="../aLib/parametrics.js"></script>
+    <script src="../aLib/shapes.js"></script>
     <script src="sketch.js"></script>
   </head>
   <body>
