--- a/art-hexagons-covering/index.html
+++ b/art-hexagons-covering/index.html
@@ -14,7 +14,7 @@
   <script src="../aLib/math.js"></script>
   <script src="../aLib/colors.js"></script>
   <script src="../aLib/texts.js"></script>
-  <script src="../aLib/parametrics.js"></script>
+  <script src="../aLib/shapes.js"></script>
   <script  src="./script.js"></script>
 
 </body>
