--- a/art-image-manipulations-example/index.html
+++ b/art-image-manipulations-example/index.html
@@ -16,7 +16,7 @@
   <script src="../aLib/math.js"></script>
   <script src="../aLib/colors.js"></script>
   <script src="../aLib/texts.js"></script>
-  <script src="../aLib/pshapes.js"></script>
+  <script src="../aLib/shapes.js"></script>
   <script src="./script.js"></script>
 
 </body>
