--- a/art-letter-flower/index.html
+++ b/art-letter-flower/index.html
@@ -36,6 +36,7 @@
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/p5@1.2.0/lib/p5.js"></script>
+  <script src="../aLib/texts.js"></script>
   <script src="sketch.js"></script>
 </body>
 
