--- a/art-circle-packing/index.html
+++ b/art-circle-packing/index.html
@@ -7,10 +7,13 @@
     <script src="https://cdn.jsdelivr.net/npm/p5@1.2.0/lib/p5.js"></script>
     <!-- <script src="../addons/p5.dom.min.js"></script> -->
     <!-- <script src="../addons/p5.sound.min.js"></script> -->
+    <script src="../aLib/math.js"></script>
+    <script src="../aLib/colors.js"></script>
     <script src="../aLib/texts.js"></script>
-    <script src="../aLib/oscillators.js"></script>
+    <script src="../aLib/shapes.js"></script>
+    <script src="../aLib/structures.js"></script>
+    <script src="../aLib/class.cricleForPacking.js"></script>
     <script src="sketch.js"></script>
-    
   </head>
   <body>
   </body>
