1. art-snowflakes (incomplete), 2. art-text-cicle-packing, 3.art-text-flow-fields, 4 etc...

--- a/art-text-circle-packing-edges/index.html
+++ b/art-text-circle-packing-edges/index.html
@@ -10,9 +10,10 @@
     <script src="../aLib/math.js"></script>
     <script src="../aLib/colors.js"></script>
     <script src="../aLib/texts.js"></script>
-    <script src="../aLib/fields.js"></script>
     <script src="../aLib/shapes.js"></script>
+    <script src="../aLib/fields.js"></script>
     <script src="../aLib/structures.js"></script>
+    <script src="../aLib/class.cricleForPacking.js"></script>
     <script src="sketch.js"></script>
   </head>
   <body>
