--- a/art-text-flow-fields/index.html
+++ b/art-text-flow-fields/index.html
@@ -10,9 +10,10 @@
     <script src="../aLib/math.js"></script>
     <script src="../aLib/colors.js"></script>
     <script src="../aLib/texts.js"></script>
-    <script src="../aLib/fields.js"></script>
     <script src="../aLib/shapes.js"></script>
+    <script src="../aLib/fields.js"></script>
     <script src="../aLib/structures.js"></script>
+    <script src="../aLib/class.cricleForPacking.js"></script>
     <script src="sketch.js"></script>
   </head>
   <body>
