--- a/art-hexagons-covering/index.html
+++ b/art-hexagons-covering/index.html
@@ -1,21 +1,20 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - P5 events</title>
-  
-
-</head>
-<body>
-<!-- partial:index.partial.html -->
-
-<!-- partial -->
+  <title>Hexagon Covering</title>
+  <link rel="stylesheet" href="../sketches-style.css">
   <script src='https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.2.0/p5.min.js'></script>
   <script src="../aLib/math.js"></script>
   <script src="../aLib/colors.js"></script>
   <script src="../aLib/texts.js"></script>
   <script src="../aLib/shapes.js"></script>
-  <script  src="./script.js"></script>
+  <script src="./script.js"></script>
+
+</head>
+
+<body>
 
 </body>
 </html>
