--- a/art-image-manipulations-example/index.html
+++ b/art-image-manipulations-example/index.html
@@ -3,15 +3,8 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Index basic maninpulation example</title>
-
-
-</head>
-
-<body>
-  <!-- partial:index.partial.html -->
-
-  <!-- partial -->
+  <title>Image basic maninpulation example</title>
+  <link rel="stylesheet" href="../sketches-style.css">
   <script src='https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.2.0/p5.min.js'></script>
   <script src="../aLib/math.js"></script>
   <script src="../aLib/colors.js"></script>
@@ -19,6 +12,7 @@
   <script src="../aLib/shapes.js"></script>
   <script src="./script.js"></script>
 
+</head>
+<body>
 </body>
-
 </html>
