--- a/art-time-table-mandalas/mandala-generator.html
+++ b/art-time-table-mandalas/mandala-generator.html
@@ -2,6 +2,7 @@
   <head>
     <title>Mandala Set Generator [based on time tables]</title>
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+    <link rel="stylesheet" href="../sketches-style.css">
   </head>
   <body>
     <p>Please wait a minute ... it is expensive operation</p>
