--- a/art-time-table-mandalas/mandala.html
+++ b/art-time-table-mandalas/mandala.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title>Mandala Looper [based on time tables]</title>
+    <link rel="stylesheet" href="../sketches-style.css">
   </head>
   <body>
     Click on canvas to stop animation.<br>
