--- a/exp-image-manipulations/index.html
+++ b/exp-image-manipulations/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Index basic maninpulation example</title>
-
+  <link rel="stylesheet" href="../sketches-style.css">
 
 </head>
 
