--- a/exp-music-visualisation-boilerplate/index.html
+++ b/exp-music-visualisation-boilerplate/index.html
@@ -3,18 +3,9 @@
 
 <head>
   <meta charset="utf-8">
+  <link rel="stylesheet" href="../sketches-style.css">
+  <link rel="stylesheet" href="style.css">
   <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
-  <style>
-    body {
-      padding: 0;
-      margin: 0;
-    }
-    #frameCount {
-      position: absolute;
-      right: 15px;
-      top: 20px;
-    }
-  </style>
 </head>
 
 <body>
