--- a/exp-music-visualisation-with-reversed-drops/index.html
+++ b/exp-music-visualisation-with-reversed-drops/index.html
@@ -3,20 +3,15 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - P5 circles example </title>
-
-
+  <title>P5 circles example</title>
 </head>
 
 <body>
-  <!-- partial:index.partial.html -->
-
-  <!-- partial -->
+  <link rel="stylesheet" href="../sketches-style.css">
   <script src="https://unpkg.com/@free-side/audioworklet-polyfill/dist/audioworklet-polyfill.js"></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.2.0/p5.min.js'></script>
   <script src="./p5.sound.js"></script>
   <script src="./script.js"></script>
-
 </body>
 
 </html>
