--- a/art-arcs/index.html
+++ b/art-arcs/index.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="../sketches-style.css">
     <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
-    <style> body {padding: 0; margin: 0;} </style>
     <script src="https://cdn.jsdelivr.net/npm/p5@1.2.0/lib/p5.js"></script>
     <script src="../aLib/colors.js"></script>
     <script src="../aLib/math.js"></script>
