--- a/art-artificial-alphabets/index.html
+++ b/art-artificial-alphabets/index.html
@@ -3,21 +3,11 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
-  <style>
-    body {
-      padding: 0;
-      margin: 0;
-    }
-  </style>
-
+  <link rel="stylesheet" href="../sketches-style.css">
 </head>
 <body>
   <script src="https://cdn.jsdelivr.net/npm/p5@1.2.0/lib/p5.js"></script>
-  <!-- <script src="../addons/p5.dom.min.js"></script> -->
-  <!-- <script src="../addons/p5.sound.min.js"></script> -->
-
   <ul id="alphabet-functions-list">
-    
   </ul>  
   <script src="functions.js"></script>
   <script src="sketch.js"></script>
