--- a/art-letter-flower/index.html
+++ b/art-letter-flower/index.html
@@ -4,27 +4,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
-  <style>
-    body {
-      padding: 0;
-      margin: 0;
-    }
-
-    .controls {
-      width: 360px;
-      position: absolute;
-      left: 1220px;
-      top: 15px;
-      font-size: 20px;
-    }
-
-    .controls input {
-      width: 100%;
-      height: 20px;
-    }
-  </style>
-
-
+  <link rel="stylesheet" href="../sketches-style.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
