--- a/art-music-visualisation/index.html
+++ b/art-music-visualisation/index.html
@@ -3,13 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
-    <style> body {padding: 0; margin: 0;} </style>
+    <link rel="stylesheet" href="../sketches-style.css">
 
   </head>
   <body>
     <div id="frameCount"></div>
-
-
     <script src="../p5.min.js"></script>
     <script src="../addons/p5.dom.min.js"></script>
     <script src="../addons/p5.sound.min.js"></script>
