--- a/art-particles/index.html
+++ b/art-particles/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title>Particles</title>
+    <link rel="stylesheet" href="../sketches-style.css">
   </head>
   <body>
     <script src="https://cdn.jsdelivr.net/npm/p5@1.2.0/lib/p5.js"></script>
