--- a/art-text-flow-fields/index.html
+++ b/art-text-flow-fields/index.html
@@ -1,21 +1,22 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
-    <style> body {padding: 0; margin: 0;} </style>
-    <script src="https://cdn.jsdelivr.net/npm/p5@1.2.0/lib/p5.js"></script>
-    <!-- <script src="../addons/p5.dom.min.js"></script> -->
-    <!-- <script src="../addons/p5.sound.min.js"></script> -->
-    <script src="../aLib/math.js"></script>
-    <script src="../aLib/colors.js"></script>
-    <script src="../aLib/texts.js"></script>
-    <script src="../aLib/shapes.js"></script>
-    <script src="../aLib/fields.js"></script>
-    <script src="../aLib/structures.js"></script>
-    <script src="../aLib/class.cricleForPacking.js"></script>
-    <script src="sketch.js"></script>
-  </head>
-  <body>
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
+  <link rel="stylesheet" href="../sketches-style.css">
+  <script src="https://cdn.jsdelivr.net/npm/p5@1.2.0/lib/p5.js"></script>
+  <script src="../aLib/math.js"></script>
+  <script src="../aLib/colors.js"></script>
+  <script src="../aLib/texts.js"></script>
+  <script src="../aLib/shapes.js"></script>
+  <script src="../aLib/fields.js"></script>
+  <script src="../aLib/structures.js"></script>
+  <script src="../aLib/class.cricleForPacking.js"></script>
+  <script src="sketch.js"></script>
+</head>
+
+<body>
+</body>
+
 </html>
