--- a/00-example-empty/index.html
+++ b/00-example-empty/index.html
@@ -14,6 +14,7 @@
     <script src="../aLib/shapes.js"></script>
     <script src="../aLib/structures.js"></script>
     <script src="sketch.js"></script>
+    <script src="../aLib/pagination.js"></script>
   </head>
   <body>
   </body>
