--- a/art-artificial-alphabets/index.html
+++ b/art-artificial-alphabets/index.html
@@ -4,14 +4,13 @@
   <meta charset="utf-8">
   <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
   <link rel="stylesheet" href="../sketches-style.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <script src="https://cdn.jsdelivr.net/npm/p5@1.2.0/lib/p5.js"></script>
-  <ul id="alphabet-functions-list">
-  </ul>  
+  <h1>Artificial Alphabets and Chat Texting</h1>
   <script src="functions.js"></script>
   <script src="sketch.js"></script>
-
+  <script src="../aLib/pagination.js"></script>
 </body>
-
 </html>
