--- a/art-cardioid/index.html
+++ b/art-cardioid/index.html
@@ -9,7 +9,9 @@
     <script src="../aLib/colors.js"></script>
     <script src="../aLib/shapes.js"></script>
     <script src="sketch.js"></script>
+    <script src="../aLib/pagination.js"></script>
   </head>
   <body>
+    <h1>Cardioid</h1>
   </body>
 </html>
