--- a/art-flower-of-life/index.html
+++ b/art-flower-of-life/index.html
@@ -1,10 +1,16 @@
+<!DOCTYPE html>
 <html>
-  <head>
-    <title>Flower of Life</title>
-    <link rel="stylesheet" href="../sketches-style.css">
-  </head>
-  <body>
-    <script src="https://cdn.jsdelivr.net/npm/p5@1.2.0/lib/p5.js"></script>
-    <script src="script.js"></script>
-  </body>
+
+<head>
+  <title>Flower of Life</title>
+  <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
+  <link rel="stylesheet" href="../sketches-style.css">
+  <script src="https://cdn.jsdelivr.net/npm/p5@1.2.0/lib/p5.js"></script>
+  <script src="scetch.js"></script>
+  <script src="../aLib/pagination.js"></script>
+</head>
+<body>
+  <h1>Flower Of Life</h1>
+</body>
+
 </html>
