--- a/art-infection/index.html
+++ b/art-infection/index.html
@@ -11,7 +11,9 @@
     <script src="../aLib/shapes.js"></script>
     <script src="particle.js"></script>
     <script src="sketch.js"></script>
+    <script src="../aLib/pagination.js"></script>
   </head>
   <body>
+    <h1>Art Infection</h1>
   </body>
 </html>
