--- a/art-letter-flower/index.html
+++ b/art-letter-flower/index.html
@@ -9,6 +9,8 @@
 </head>
 
 <body>
+  <h1>Mandala generator</h1>
+  <h2>from Armenian Latter</h2>
   <div class="controls">
     Rotation π/ <span id="rotationvalue">2</span><br>
     <input type="range" min=2 max=10 step=1 value=2 id="rotations"><br>
@@ -19,6 +21,7 @@
   <script src="https://cdn.jsdelivr.net/npm/p5@1.2.0/lib/p5.js"></script>
   <script src="../aLib/texts.js"></script>
   <script src="sketch.js"></script>
+  <script src="../aLib/pagination.js"></script>
 </body>
 
 </html>
