--- a/art-oscilating-squares/index.html
+++ b/art-oscilating-squares/index.html
@@ -6,7 +6,9 @@
     <link rel="stylesheet" href="../sketches-style.css">
     <script src="https://cdn.jsdelivr.net/npm/p5@1.2.0/lib/p5.js"></script>
     <script src="sketch.js"></script>
+    <script src="../aLib/pagination.js"></script>
   </head>
   <body>
+    <h1>Living Squares</h1>
   </body>
 </html>
