--- a/art-text-entropy/index.html
+++ b/art-text-entropy/index.html
@@ -4,12 +4,16 @@
     <meta charset="utf-8">
     <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
     <link rel="stylesheet" href="../sketches-style.css">
+    <link rel="stylesheet" href="style.css">
     <script src="https://cdn.jsdelivr.net/npm/p5@1.2.0/lib/p5.js"></script>
     <script src="../aLib/texts.js"></script>
-    <script src="../aLib/oscillators.js"></script>
+    <script src="../aLib/osscilators.js"></script>
     <script src="sketch.js"></script>
+    <script src="../aLib/pagination.js"></script>
     
   </head>
   <body>
+    <h1>Entropy</h1>
+    <p class="instructions">Click and move cursor over canvas</p>
   </body>
 </html>
