--- a/art-letter-flowers/index.html
+++ b/art-letter-flowers/index.html
@@ -7,7 +7,9 @@
     <script src="https://cdn.jsdelivr.net/npm/p5@1.2.0/lib/p5.js"></script>
     <script src="../aLib/texts.js"></script>
     <script src="sketch.js"></script>
+    <script src="../aLib/pagination.js"></script>
   </head>
   <body>
+      <h1>Mandalas from Armenian Letters</h1>
   </body>
 </html>
