--- a/art-noize-rotating-fans/index.html
+++ b/art-noize-rotating-fans/index.html
@@ -10,7 +10,9 @@
     <script src="../aLib/texts.js"></script>
     <script src="../aLib/shapes.js"></script>
     <script src="sketch.js"></script>
+    <script src="../aLib/pagination.js"></script>
   </head>
   <body>
+    <h1>Rotating Fans</h1>
   </body>
 </html>
