--- a/art-particles/index.html
+++ b/art-particles/index.html
@@ -1,11 +1,14 @@
+<!DOCTYPE html>
 <html>
   <head>
     <title>Particles</title>
     <link rel="stylesheet" href="../sketches-style.css">
-  </head>
-  <body>
     <script src="https://cdn.jsdelivr.net/npm/p5@1.2.0/lib/p5.js"></script>
     <script src="particle.js"></script>
     <script src="script.js"></script>
+    <script src="../aLib/pagination.js"></script>
+  </head>
+  <body>
+    <h1>Particles</h1>
   </body>
 </html>
