--- a/art-psy-rect-blanding-modes/index.html
+++ b/art-psy-rect-blanding-modes/index.html
@@ -4,8 +4,13 @@
     <meta charset="utf-8">
     <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
     <link rel="stylesheet" href="../sketches-style.css">
+    <link rel="stylesheet" href="style.css">
     <script src="https://cdn.jsdelivr.net/npm/p5@1.2.0/lib/p5.js"></script>
     <script src="../aLib/colors.js"></script>
     <script src="sketch.js"></script>
+    <script src="../aLib/pagination.js"></script>
   </head>
+  <body>
+    <h1>Blanding Modes</h1>
+  </body>
 </html>
