--- a/art-artificial-alphabets/index.html
+++ b/art-artificial-alphabets/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
   <script src="https://cdn.jsdelivr.net/npm/p5@1.2.0/lib/p5.js"></script>
-  <h1>Artificial Alphabets and Chat Simulation</h1>
+  <h1>Alien alphabets</h1>
+  <p class="instructions">pick others from menu</p>
   <script src="functions.js"></script>
   <script src="sketch.js"></script>
   <script src="../aLib/pagination.js"></script>
