--- a/art-cardioid/index.html
+++ b/art-cardioid/index.html
@@ -12,6 +12,6 @@
     <script src="../aLib/pagination.js"></script>
   </head>
   <body>
-    <h1>Cardioid</h1>
+    <h1>DMT Heart</h1>
   </body>
 </html>
