--- a/art-constalation/index.html
+++ b/art-constalation/index.html
@@ -15,6 +15,7 @@
     <script src="../aLib/pagination.js"></script>
   </head>
   <body>
-    <h1>Random Constalation</h1>
+    <h1>Random space landscapes</h1>
+    <p class="instructions">Click on image to change</p>
   </body>
 </html>
