--- a/art-image-manipulations-example/index.html
+++ b/art-image-manipulations-example/index.html
@@ -11,8 +11,11 @@
   <script src="../aLib/texts.js"></script>
   <script src="../aLib/shapes.js"></script>
   <script src="./script.js"></script>
-
+  <script src="../aLib/pagination.js"></script>
 </head>
+
 <body>
+    <h1>Image Manipulations</h1>
 </body>
+
 </html>
