--- a/art-letter-flower/index.html
+++ b/art-letter-flower/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <h1>Mandala generator</h1>
-  <h2>from Armenian Latter</h2>
+  <p class="instructions">play with controls =></p>
   <div class="controls">
     Rotation π/ <span id="rotationvalue">2</span><br>
     <input type="range" min=2 max=10 step=1 value=2 id="rotations"><br>
