--- a/art-noize-rotating-fans/index.html
+++ b/art-noize-rotating-fans/index.html
@@ -13,6 +13,6 @@
     <script src="../aLib/pagination.js"></script>
   </head>
   <body>
-    <h1>Rotating Fans</h1>
+    <h1>Guardians</h1>
   </body>
 </html>
