--- a/art-psy-rect-blanding-modes/index.html
+++ b/art-psy-rect-blanding-modes/index.html
@@ -11,6 +11,6 @@
     <script src="../aLib/pagination.js"></script>
   </head>
   <body>
-    <h1>Blanding Modes</h1>
+    <h1>Blanding Squares</h1>
   </body>
 </html>
