--- a/art-text-entropy/index.html
+++ b/art-text-entropy/index.html
@@ -14,6 +14,6 @@
   </head>
   <body>
     <h1>Entropy</h1>
-    <p class="instructions">Click and move cursor over canvas</p>
+    <p class="instructions">Click 3 times</p>
   </body>
 </html>
