--- a/art-text-modifications/index.html
+++ b/art-text-modifications/index.html
@@ -6,7 +6,11 @@
     <link rel="stylesheet" href="../sketches-style.css">
     <script src='https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.2.0/p5.min.js'></script>
     <script src="sketch.js"></script>
+    <script src="../aLib/pagination.js"></script>
+    
   </head>
   <body>
+    <h1>Dinamic Typography Experiments</h1>
+    <p class="instructions">Click to see other versions.</p>
   </body>
 </html>
