--- a/art-infection/index.html
+++ b/art-infection/index.html
@@ -14,6 +14,6 @@
     <script src="../aLib/pagination.js"></script>
   </head>
   <body>
-    <h1>Art Infection</h1>
+    <h1>Infection</h1>
   </body>
 </html>
