--- a/art-text-modifications/index.html
+++ b/art-text-modifications/index.html
@@ -7,7 +7,7 @@
     <script src='https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.2.0/p5.min.js'></script>
     <script src="sketch.js"></script>
     <script src="../aLib/pagination.js"></script>
-    
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <h1>Dinamic Typography Experiments</h1>
